# algorithms_course

./: .gitignore  README.md  TOC.md  carbon_source_config.json  generate_build_scripts.py  generate_practice_md.py  links.md
0_intro/: 0_0_plan.md  0_1_algorithms.md  0_2_computers.md  0_3_programms.md  0_4_datas.md  0_4_variables.md  0_5_binary_operators.md  0_5_problems.md
0_intro/images/: pascal_calc.xcf
0_intro/lection/: 0_2_computers.md  0_3_programms.md  0_4_variables.md
0_intro/lection/slides/: 0_introduction.tex
0_intro/practice/: 0_0_plan.md  0_1_compilation.md  0_full_practice.md  CMakeLists.txt  practice.md  readme.md  readme_en.md  readme_old.md
0_intro/practice/md/: 0.md  1.md  2.md  3.md  4.md  5.md  6.md  7.md
0_intro/practice/src/: addresses.c  addresses_arrays.c  bitmask_simple_example.c  bitmasks.c  bitop_oneline.c  bitop_oneline_alternative.c  bitwise_operator_example.c  check_overflow.c  check_pwr_of_two.c  cols_rows_perf.c  decimal_to_octal.c  delete_element_perf.c  find_element_index_alg.c  find_element_index_perf.c  find_unique.c  insert_element_alg.c  int_and_float.c  literals_example.c  print_bits.c  signed_unsigned.c  swap_variables.c
0_intro/slides/: .example-beamer-HSE-en.tex.swp  0_introduction.tex
0_intro/slides/images/: pascal_calc.xcf
0_intro/src/: bitmask_simple_example.c  bitwise_operator_example.c  bitwise_operator_example_output.txt  bitwise_shift_example.c  bitwise_shift_example_output.txt  literals_example.c  literals_example_output.txt
1_arrays_complexity_testing/: 1_0_plan.md  1_1_arrays.md  1_2_problems.md  1_3_compexity.md  1_3_complexity.md  1_4_testing.md
1_arrays_complexity_testing/lection/: 1_3_complexity.md  1_4_testing.md
1_arrays_complexity_testing/lection/slides/: 1_arrays_complexity_testing.tex
1_arrays_complexity_testing/practice/: CMakeLists.txt  build.sh  readme.md  readme_en.md
1_arrays_complexity_testing/practice/md/: 0.md  1.md  10.md  2.md  4.md  5.md  6.md  7.md  8.md  9.md
1_arrays_complexity_testing/practice/src/: 2D_rows_cols_sum.c  2D_rows_cols_sum_simple.c  D_two_dim_array_sum.c  find_element_index_perf.c  insert_delete.c  insert_delete_global.c  insert_element_perf.c
1_arrays_complexity_testing/slides/: 1_arrays_complexity_testing.tex
1_complexity_arrays/practice/: practice.md
1_complexity_arrays/practice/md/: 3.md
1_complexity_arrays/practice/src/: addresses_arrays.c  delete_element_alg.c  find_element_index_alg.c  get_element_by_index_perf.c
2_sorting_part_1/practice/: practice.md
2_sorting_part_1/practice/md/: 0.md  4.md  6.md
2_sorting_part_1/practice/src/: bubble_sort.c  counting_sort.c  recursive_callstack.c  recursive_factorial.c  selection_sort.c
2_sorting_simple/lection/: 1_0_plan.md  1_1_arrays.md  1_3_complexity.md
2_sorting_simple/lection/slides/: 2_sorting_simple.tex
2_sorting_simple/practice/: CMakeLists.txt
2_sorting_simple/practice/md/: 1.md  2.md  3.md  4.md  5.md
2_sorting_simple/practice/src/: bucket_sort.c  counting_sort.c  insertion_sort.c  radix_sort.c
3_sorting_part_2/practice/: CMakeLists.txt  practice.md
3_sorting_part_2/practice/md/: 1.md  2.md  3.md
3_sorting_part_2/practice/src/: merge_sort.c  req_1_to_n.c  req_a_to_b.c  (+3 more)
3_sorting_recursion/practice/: CMakeLists.txt  practice.md
3_sorting_recursion/practice/md/: 0.md  2.md  3.md  4.md
3_sorting_recursion/practice/src/: nth_element.c  qsort_hoar.c  qsort_lomuto.c  req_check_pwr_2.c  tim_sort.c
4_search/practice/: CMakeLists.txt  practice.md
4_search/practice/md/: 0.md  1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md
4_search/practice/src/: benchmark.c  binary_search.c  binary_search_for_unimodal_func.c  exponential_search.c  interpolation_search.c  jump_search.c  linear_search.c  ternary_search.c  ternary_search_for_unimodal_func.c
5_simple_data_structures/practice/: CMakeLists.txt  practice.md
5_simple_data_structures/practice/md/: 0.md  1.md  2.md  3.md  4.md  5.md  6.md
5_simple_data_structures/practice/src/: array_queue.c  array_stack.c  linked_list.c  list_queue.c  list_stack.c
config/: carbon_source_config.json
contests/0/: D_two_dim_array_sum.c
info/: code_format_c_cpp.md
lections/: 3.5_cryptography_101.pptx  4_data_structures_1.pptx
old/lections/: 1_types_arrays_complexity.pptx  3.5_cryptography_101.pptx  3_number_theory.pptx
practice/0_vars_arrays/: a.out  addresses.c  addresses_arrays.c  cols_rows.c  cols_rows_perf.c  delete_element_alg.c  delete_element_perf.c  find_element_index_alg.c  find_element_index_perf.c  get_element_by_index_perf.c  insert_element_alg.c  insert_element_perf.c  plan.md  print_addr.c  readme_rus.md  simple_operations.c
practice/10_graphs/: Makefile  adjacency_list.c  adjacency_matrix.c  edges_list.c
practice/11_graph_path/: Makefile  bellman_ford  bellman_ford.c  dijkstra  dijkstra.c  floyd_warshall  floyd_warshall.c  graph.c  graph.h
practice/12_graph_MST/: kruskal.cpp
practice/12_two_pointers/: CMakeLists.txt  Readme.md  min_k_sum.cc  most_close.cc  sum_of_two.cc
practice/13_substr/: Makefile  kmp.c  main.c  naive.c  rabin_karp.c  substr.h
practice/15_dynamic/: README_EN.md  README_RU.md  knapsack_0_1.c  knapsack_unbounded.c  lcm.c
practice/1_arrays_testing_complexity/: 2D_rows_cols_sum_simple.c  D_two_dim_array_sum.c  insert_delete.c  insert_delete_global.c  readme_RU.md  swap_without_buffer.c
practice/2_sorting/: Makefile  bucket_sort.c  counting_sort.c  qsort_hoar.c  qsort_lomuto.c  readme_RU.md  sorting.c  sorting.h  utility_demo.c
practice/3_search/: Makefile  exponential_search_w_rec_binary.c  interpolation_search.c  linear_search.c
practice/4_numbers/: prime_numbers.c
practice/4_numbers_and_ciphers/: one_time_pad_cipher.c  shift_cipher.c  subs_cipher.c
practice/5_bitmanip/: Makefile
practice/6_simple_data_structures/: Makefile  array_stack.c  linked_list.c  readme_ru.md
practice/7.1_hash_table_cpp/: Hashmap.cpp  Makefile
practice/7_hash_table/: Makefile  main.c
practice/9_disjoint_set_union/: Makefile
practice/cpp/: Makefile  README_RU.md  outputs.txt
snippets/: time.c
(+42 files in other folders)
